Preventing github buttons from covering navigation arrows

--- a/help.css
+++ b/help.css
@@ -3,4 +3,5 @@
   position: absolute;
   bottom: 10px;
   left: 0; right: 0;
+  z-index: -1;
 }
